--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
       <div id="catch"></div>
-      <div id="footer"></div>
+      <div id="hero"></div>
+      <!--<div id="footer"></div>-->
     <script src="/dist/build.js"></script>
   </body>
 </html>
