web制作コーディングの途中

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
       <div id="catch"></div>
       <div id="hero"></div>
+      <div id="website"></div>
       <!--<div id="footer"></div>-->
     <script src="/dist/build.js"></script>
   </body>
