システム/技術顧問/イベントを複製

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       <div id="catch"></div>
       <div id="hero"></div>
       <div id="website"></div>
+      <div id="system"></div>
+      <div id="advisor"></div>
+      <div id="event"></div>
       <!--<div id="footer"></div>-->
     <script src="/dist/build.js"></script>
   </body>
