フッターのファイル読み込み

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="system"></div>
       <div id="advisor"></div>
       <div id="event"></div>
-      <!--<div id="footer"></div>-->
+      <div id="footer"></div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
